# UnFooled-Adversarial-Robustness-in-Deepfake-and-Image-Forensics

./: README.md
unfooled_code/: README.md  pyproject.toml  requirements.txt
unfooled_code/scripts/: eval.py  notebook_export.py  train.py
unfooled_code/src/unfooled/: __init__.py
unfooled_code/src/unfooled/data/: datasets.py
unfooled_code/src/unfooled/experiments/: eval_entry.py  train_entry.py
unfooled_code/src/unfooled/models/: model.py
unfooled_code/src/unfooled/training/: train.py
unfooled_code/src/unfooled/utils/: metrics.py
