[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unfooled"
version = "0.1.0"
description = "Attack-aware robust deepfake detection"
authors = [{name="Noor Fatima"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
unfooled-train = "unfooled.experiments.train_entry:main"
unfooled-eval  = "unfooled.experiments.eval_entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unfooled = ["py.typed"]
